fix problem with horizontal scroll on update.bml
git-svn-id: http://code.livejournal.org/svn/livejournal/trunk@9693 1dfba125-df10-0410-8a77-af1a8d6d074f

--- a/htdocs/stc/entry.css
+++ b/htdocs/stc/entry.css
@@ -22,9 +22,6 @@
     margin-left: 6px;
 }
 
-#ljbreadcrumbs {
-    width: 860px;
-}
 #updateForm {
     font-family: arial, verdana, 'sans-serif';
     min-width: 650px;
